Source Link Change

--- a/src/main/resources/templates/confirmation-link.html
+++ b/src/main/resources/templates/confirmation-link.html
@@ -72,12 +72,12 @@
         <q><b>Note : The following link will expires in an hour after sending. If it is expired Go and Re-request in
                 your
                 app.</b></q>
-        <p>Click the following link to confirm your account <a th:href="@{'http://localhost:8080/api/' + ${role} + '/confirm-account/?id=' + ${id}}">Click Here</a> or Copy and Paste the following
-            link in your browser. <a th:href="@{'http://localhost:8080/api/' + ${role} + '/confirm-account/?id=' + ${id}}" th:text="@{'http://localhost:8080/api/' + ${role} + '/confirm-account/?id=' + ${id}}">
+        <p>Click the following link to confirm your account <a th:href="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/confirm-account/?id=' + ${id}}">Click Here</a> or Copy and Paste the following
+            link in your browser. <a th:href="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/confirm-account/?id=' + ${id}}" th:text="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/confirm-account/?id=' + ${id}}">
             </a>
         </p>
         <div class="button">
-            <a th:href="@{'http://localhost:8080/api/' + ${role} + '/confirm-account/?id=' + ${id}}" target="_blank">CONFIRM ACCOUNT</a>
+            <a th:href="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/confirm-account/?id=' + ${id}}" target="_blank">CONFIRM ACCOUNT</a>
         </div>
         <p>This is an auto-generated mail. Don't reply with this mail.</p>
         <p>
