--- a/src/main/resources/templates/email-sent.html
+++ b/src/main/resources/templates/email-sent.html
@@ -26,6 +26,8 @@
             font-size: small;
             color: white;
             background-color: #28292e;
+            justify-content: center;
+            align-items: center;
         }
 
         p {
