--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -16,6 +16,8 @@
             color: white;
             background-color: rgb(40, 41, 46);
             font-family: 'Poppins', sans-serif;
+            justify-content: center;
+            align-items: center;
         }
 
         .button {
@@ -61,14 +63,14 @@
             <h3>WELCOME TO HEART</h3>
             <img th:src="@{./images/HEART.png}" alt="Logo" width="50" height="50">
         </div>
-        <p>Click the following link to reset your password <a th:href="@{'http://localhost:8080/api/' + ${role} + '/reset-password/?id=' + ${id}}"
+        <p>Click the following link to reset your password <a th:href="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/reset-password/?id=' + ${id}}"
                 target="_blank">Click
                 Here</a>
             or
             Copy and paste the following URL to your browser.<a
-                th:href="@{'http://localhost:8080/api/' + ${role} + '/reset-password/?id=' + ${id}}"><p th:text="@{'http://localhost:8080/api/' + ${role} + '/reset-password/?id=' + ${id}}"></p></a></p>
+                th:href="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/reset-password/?id=' + ${id}}"><p th:text="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/reset-password/?id=' + ${id}}"></p></a></p>
         <div class="button">
-            <a th:href="@{'http://localhost:8080/api/' + ${role} + '/reset-password/?id=' + ${id}}" target="_blank">RESET PASSWORD</a>
+            <a th:href="@{'https://heart-bhp5.onrender.com/api/' + ${role} + '/reset-password/?id=' + ${id}}" target="_blank">RESET PASSWORD</a>
         </div>
         <p>Hi. This is an auto-generated mail. Don't Reply with this mail.</p>
         <p>
