--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -111,7 +111,7 @@
         <h3>WELCOME TO HEART</h3>
         <img th:src="@{/images/HEART.png}" alt="Logo" width="50" height="50">
     </div>
-    <form class="form" method="post" th:action="@{'https://heart-bhp5.onrender.com/' + ${role} + '/update-password'}" th:object="${password}">
+    <form class="form" method="post" th:action="@{'http://localhost:8080/' + ${role} + '/update-password'}" th:object="${password}">
         <label>Username</label>
         <input type="text" name="username" class="username" readonly th:value="${username}">
         <input type="hidden" name="id" th:value="${id}" readonly class="username" >
